Updated README and rearranged demo files

--- a/AudioPipeline/Packages/manifest.json
+++ b/AudioPipeline/Packages/manifest.json
@@ -1,14 +1,14 @@
 {
   "dependencies": {
-    "com.sonosthesia.audio": "file:../../../sonosthesia-unity-packages/packages/com.sonosthesia.audio",
-    "com.sonosthesia.pack": "file:../../../sonosthesia-unity-packages/packages/com.sonosthesia.pack",
-    "com.sonosthesia.packaudio": "file:../../../sonosthesia-unity-packages/packages/com.sonosthesia.packaudio",
-    "com.sonosthesia.signal": "file:../../../sonosthesia-unity-packages/packages/com.sonosthesia.signal",
-    "com.sonosthesia.utils": "file:../../../sonosthesia-unity-packages/packages/com.sonosthesia.utils",
-    "com.sonosthesia.processing": "file:../../../sonosthesia-unity-packages/packages/com.sonosthesia.processing",
-    "com.sonosthesia.flow": "file:../../../sonosthesia-unity-packages/packages/com.sonosthesia.flow",
-    "com.sonosthesia.mapping": "file:../../../sonosthesia-unity-packages/packages/com.sonosthesia.mapping",
-    "com.sonosthesia.target": "file:../../../sonosthesia-unity-packages/packages/com.sonosthesia.target",
+    "com.sonosthesia.audio": "1.10.0",
+    "com.sonosthesia.pack": "1.10.0",
+    "com.sonosthesia.packaudio": "1.10.0",
+    "com.sonosthesia.signal": "1.10.0",
+    "com.sonosthesia.utils": "1.10.0",
+    "com.sonosthesia.processing": "1.10.0",
+    "com.sonosthesia.flow": "1.10.0",
+    "com.sonosthesia.mapping": "1.10.0",
+    "com.sonosthesia.target": "1.10.0",
     "com.unity.collab-proxy": "2.5.1",
     "com.unity.feature.development": "1.0.1",
     "com.unity.textmeshpro": "3.0.6",
